--- a/app/views/users/dashboard/index.html.erb
+++ b/app/views/users/dashboard/index.html.erb
@@ -14,36 +14,56 @@
     </div>
       <div style="float:left;margin-left: 10px;">
         <h2 style="color:#4B4B4B"><%= @user.name %></h2>
+        <% if @linkedin_details && @linkedin_details.headline %><h5 style="color:#4B4B4B"><%= @linkedin_details.headline %></h5><% end %>
         <p style="color:#4B4B4B">Email : <%= @user.email %></p>
       </div>
      </div>
 <div class="cl-30"></div>
+<div class="raw-fluid padding-left-10">
       <h2 style="color:#4086a3;line-height: 5px;font-size: 20px;">Technologies</h2>
       <div style="border-bottom: solid #ccc 1.5px;"></div>
+</div>
 <div class="cl-30"></div>
 <div class="cl-30"></div>
 <div class="cl-30"></div>
+<div class="raw-fluid padding-left-10">
+  <div class="padding-10">
       <h2 style="color:#4086a3;line-height: 5px;font-size: 20px;">Experiences</h2>
       <div style="border-bottom: solid #ccc 1.5px;"></div>
+    <div class="cl-10"></div>
+    
+          <% if @company && @company.name %><p style="color:#4B4B4B;font-size: 20px;"><%= @company.name %></p><% end %>
+          <% if @industry && @industry.name %><p style="color:#4B4B4B;font-size: 17px;"><%= @industry.name %></p><% end %>
+          <% if @country && @country.name %><p style="color:#4B4B4B;font-size: 17px;"><%= @country.name %></p><% end %>
+          <% if @city && @city.name %><p style="color:#4B4B4B;font-size: 17px;"><%= @city.name %></p><% end %>
 <div class="cl-30"></div>
-<div class="cl-30"></div>
+</div>
+</div>
+<div class="raw-fluid padding-left-10" >
       <h2 style="color:#4086a3;line-height: 5px;font-size: 20px;">Education</h2>
       <div style="border-bottom: solid #ccc 1.5px;"></div>
 <div class="cl-30"></div>
 <div class="cl-30"></div>
 <div class="cl-30"></div>
+</div>
+<div class="raw-fluid padding-left-10">
       <h2 style="color:#4086a3;line-height: 5px;font-size: 20px;">Certification</h2>
       <div style="border-bottom: solid #ccc 1.5px;"></div>
 <div class="cl-30"></div>
 <div class="cl-30"></div>
+</div>
+<div class="raw-fluid padding-left-10">
       <h2 style="color:#4086a3;line-height: 5px;font-size: 20px">Open Source</h2>
       <div style="border-bottom: solid #ccc 1.5px;"></div>
 <div class="cl-30"></div>
 <div class="cl-30"></div>
+</div>
+<div class="raw-fluid padding-left-10">
       <h2 style="color:#4086a3;line-height: 5px;font-size: 20px">App & Softwares</h2>
       <div style="border-bottom: solid #ccc 1.5px;"></div>
 <div class="cl-30"></div>
     
+</div>
     </div>
       <% end %>
     <div class="span4" style="margin-right:0px">
