--- a/app/views/users/dashboard/index.html.erb
+++ b/app/views/users/dashboard/index.html.erb
@@ -71,8 +71,16 @@
       <div class="header">
         <p style="text-align:center;font-size: 18px;padding-top: 5px">Import your Datas</p>
       </div>
-      <%= link_to "Import", "/linkedin/auth" %>
-      
+      <div class="padding-5" >
+      <div class="feed" style="height:35px;">
+        <div class="float-left">
+          <%= image_tag '/assets/linkedin.jpg',:style=>"width:autox;height:auto;" %>
+        </div>
+        <div class="float-left margin-left-15">
+          <%= link_to "Import Linkedin", "/linkedin/auth" %>
+        </div>
+      </div>
+      </div>
     </div>
     <div class="sidebar-container" style="height: 200px;;background-color: white;">
       <div class="header">
