--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -11,7 +11,7 @@ min-width: 960px;
 .grey-fade {
 background: -webkit-gradient(linear, left top, left bottom, from(#fcfcfc), to(#c1c1c1));
 background: -moz-linear-gradient(top, #fcfcfc, #c1c1c1);
-background: -webkit-gradient(linear, left top, left bottom, from(#fcfcfc), to(#c1c1c11));
+background: -webkit-gradient(linear, left top, left bottom, from(#fcfcfc), to(#c1c1c1));
 border-bottom: 5px solid #898989;
 color: white !important;
 width: 100%;
