--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -86,7 +86,7 @@ margin-bottom: 20px;
 
 /*    position: relative;*/
 /*width: 560px;*/
-background-color: #white;
+background-color: white;
 
 -moz-box-shadow: 0 1px 2px rgba(0,0,0,0.15);
 -webkit-box-shadow: 0 1px 2px rgba(0,0,0,0.15);
@@ -97,8 +97,8 @@ margin-bottom: 20px;
 }
 
 .sidebar-container .header {
-    background-color:#898989;
-    height:30px;
+    background-color: #898989;
+    height: 30px;
     padding: 2px;
     border-radius:10px 10px 0px 0px;
 }
