changes has been added

--- a/app/views/users/dashboard/index.html.erb
+++ b/app/views/users/dashboard/index.html.erb
@@ -79,6 +79,10 @@
         <div class="float-left margin-left-15">
           <%= link_to "Import Linkedin", "/linkedin/auth" %>
         </div>
+        <div class="float-left margin-left-15">
+          <%#= link_to "Import Github", user_omniauth_authorize_path(:github)%>
+          <%= link_to "Import Github", '/github/authorize'%>
+        </div>
       </div>
       </div>
     </div>
