--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -8,13 +8,13 @@
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
 // Note: If you use asset_path() here, your compiled boostrap_and_overrides.css will not
 //       have the proper paths. So for now we use the absolute path.
-@fontAwesomeEotPath: asset-path("fontawesome-webfont.eot");
-@fontAwesomeWoffPath: asset-path("fontawesome-webfont.woff");
-@fontAwesomeTtfPath: asset-path("fontawesome-webfont.ttf");
-@fontAwesomeSvgPath: asset-path("fontawesome-webfont.svg");
+//@fontAwesomeEotPath: asset-path("fontawesome-webfont.eot");
+//@fontAwesomeWoffPath: asset-path("fontawesome-webfont.woff");
+//@fontAwesomeTtfPath: asset-path("fontawesome-webfont.ttf");
+//@fontAwesomeSvgPath: asset-path("fontawesome-webfont.svg");
 
 // Font Awesome
-@import "fontawesome";
+//@import "fontawesome";
 
 // Your custom LESS stylesheets goes here
 //
@@ -29,11 +29,14 @@
 
 @import "twitter/bootstrap/bootstrap";
 @import "twitter/bootstrap/responsive";
+
 body { font-size: 14px;
-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial ;
 }
 
 .navbar .brand {font-family: 'Chela One' !important;font-style: normal; font-weight: bold;font-size:30px}
 
-
+h {
+font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial;
+}
 
