basic info form has been created fom cv builder

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,8 @@
  *
  *= require_self
  *= require home
+ *= require lightbox
+ *= require noty
  *= require bootstrap_and_overrides
  *= require general
  *= require_tree .
