--- a/app/views/widgets/_add_to_cv.html.erb
+++ b/app/views/widgets/_add_to_cv.html.erb
@@ -3,7 +3,7 @@
     <p style="text-align:center;font-size: 18px;padding-top: 5px">Add to Your CV</p>
   </div>
   <ul class="nav nav-tabs nav-stacked">
-    <li><a href="#">Basic Information</a></li>
+    <li><%= link_to("Basic Information"  , edit_basic_info_path , :remote => true) %></li>
     <li><a href="#">Qualification</a></li>
     <li><a href="#">Interests</a></li>
     <li><a href="#">References</a></li>
