--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -69,6 +69,9 @@
   </div>
   </div>
 
+	<!-- Lightbox and Commaon Scripts -->
+    <%= render :partial=>"/layouts/common_scripts" %>
+    <%= render :partial=>"/layouts/lightbox/main" %>
   
 </body>
 </html>
