github import has been implemented successfully

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -37,6 +37,9 @@ font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial ;
 .navbar .brand {font-family: 'Chela One' !important;font-style: normal; font-weight: bold;font-size:30px}
 
 h {
-font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial;
+font-family: 'Cinzel Decorative' !important;
 }
 
+p {
+font-family: 'Cinzel Decorative' !important;
+}
