--- a/app/views/users/dashboard/_apps_and_software.html.erb
+++ b/app/views/users/dashboard/_apps_and_software.html.erb
@@ -3,6 +3,6 @@
 <div class="cl-30"></div>
 
 <div class="raw-fluid padding-left-10">
-      <h2 style="color:#4086a3;line-height: 5px;font-size: 20px">App & Softwares</h2>
+      <h2 class="heading" style="line-height: 5px;font-size: 20px">App & Softwares</h2>
       <div style="border-bottom: solid #ccc 1.5px;"></div>
 </div>
