--- a/app/views/layouts/after-login.html.erb
+++ b/app/views/layouts/after-login.html.erb
@@ -10,7 +10,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top">
       <div class="navbar-inner">
         <div class="container">
-          <a class="brand" href="#"><span style="color:white;">Cv </span><span style="color:#0094BD;">Builder</span></a>
+          <a class="brand" href="#"><span style="color:white;">Cv </span><%= image_tag("/assets/cv2.png") %><span style="color:#0094BD;"> Builder</span></a>
           <div class="nav-collapse">
             <ul class="nav">
               <li><%= link_to "About" %></li>
