--- a/app/views/users/dashboard/_education.html.erb
+++ b/app/views/users/dashboard/_education.html.erb
@@ -2,7 +2,7 @@
 <div class="cl-30"></div>
 <div class="cl-30"></div>
 <div class="raw-fluid padding-left-10" >
-      <h2 style="color:#4086a3;line-height: 5px;font-size: 20px;">Education</h2>
+      <h2 class="heading" style="line-height: 5px;font-size: 20px;">Education</h2>
       <div style="border-bottom: solid #ccc 1.5px;"></div>
 </div>
 
