--- a/app/views/users/dashboard/_technologies.html.erb
+++ b/app/views/users/dashboard/_technologies.html.erb
@@ -3,3 +3,6 @@
       <h2 class="heading" style="line-height: 5px;font-size: 20px;">Technologies</h2>
       <div style="border-bottom: solid #ccc 1.5px;"></div>
 </div>
+ <div class="cl-30"></div>
+ <div class="cl-30"></div>
+ <div class="cl-30"></div>
