--- a/app/views/users/dashboard/_basic_info.html.erb
+++ b/app/views/users/dashboard/_basic_info.html.erb
@@ -7,24 +7,22 @@
     <div class="span5" style="width:380px;margin-left:30px;">
       <h2 style="color:#4B4B4B;margin-top: 0px;"><%= @user.name %></h2>
       <% if @linkedin_details && @linkedin_details.headline %><h5 style="color:#4B4B4B"><%= @linkedin_details.headline %></h5><% end %>
-      <% if current_user.basic_info && current_user.basic_info.email %>
-        <span style="color: #08C;"><%= current_user.basic_info.email %></span>
+        <span style="color: #08C;"><%= current_user.email %></span>
+        <div class="cl-3"></div>
+      <% if @linkedin_details && @linkedin_details.personal_website %>
+        <%= link_to "#{@linkedin_details.personal_website}" , @linkedin_details.personal_website %>
         <div class="cl-3"></div>
       <% end %>
-      <% if current_user.basic_info && current_user.basic_info.website %>
-        <%= link_to "#{current_user.basic_info.website}" , current_user.basic_info.website %>
+      <% if @linkedin_details && @linkedin_details.twitter_account %>
+        <%= link_to "@#{@linkedin_details.twitter_account}" , "http://twitter.com/#{@linkedin_details.twitter_account}"%>
         <div class="cl-3"></div>
       <% end %>
-      <% if current_user.basic_info && current_user.basic_info.twitter_handle %>
-        <%= link_to "@ #{current_user.basic_info.twitter_handle}" , "http://twitter.com/#{current_user.basic_info.twitter_handle}"%>
+      <% if @linkedin_details && @linkedin_details.public_profile_url %>
+        <%= link_to "#{@linkedin_details.public_profile_url}" , @linkedin_details.public_profile_url %>
         <div class="cl-3"></div>
       <% end %>
-      <% if current_user.basic_info && current_user.basic_info.linkedin_url %>
-        <%= link_to "#{current_user.basic_info.linkedin_url}" , current_user.basic_info.linkedin_url %>
-        <div class="cl-3"></div>
-      <% end %>
-      <% if current_user.basic_info && current_user.basic_info.address %>
-        <p class="muted"><%= current_user.basic_info.address  %></p>
+      <% if @linkedin_details && @linkedin_details.main_address %>
+        <p class="muted"><%= @linkedin_details.main_address %></p>
         <div class="cl"></div>
       <% end %>
     </div>
