--- a/app/views/users/dashboard/_education.html.erb
+++ b/app/views/users/dashboard/_education.html.erb
@@ -1,8 +1,31 @@
-<div class="cl-30"></div>
-<div class="cl-30"></div>
-<div class="cl-30"></div>
 <div class="raw-fluid padding-left-10" >
-      <h2 class="heading" style="line-height: 5px;font-size: 20px;">Education</h2>
-      <div style="border-bottom: solid #ccc 1.5px;"></div>
+  <h2 class="heading" style="line-height: 5px;font-size: 20px;">Education</h2>
+  <div style="border-bottom: solid #ccc 1.5px;"></div>
+  <div class="cl-10"></div>
+
+  <% if @education_details && @education_details.any? %>
+    <% @education_details.each do |edu| %>
+      <div class="feed">
+        <div class="row-fluid">
+          <div class="span9" style="width:390px;">
+            <h4 style="line-height:20px;"><%= edu.degree %></h4>
+          </div>
+          <div class="span3" style="float:right">
+            <p style="color:#4B4B4B;font-size: 15px;font-style: italic"><%= edu.start_date %> to <%= edu.end_date %></p>
+          </div>
+        </div>
+        <p style="color:#4B4B4B;font-size: 15px;font-style: italic"><%= edu.school_name %></p>
+        <%= link_to "delete" , '#' ,:style=>"float:right;margin-right:15px;" %>
+        <%= link_to "edit" , '#' , :remote => true ,:style=>"float:right;margin-right:20px;" %>
+        <div class="cl"></div>
+      </div>
+
+    <% end %>
+  <% else %>
+    <div class="cl-30"></div>
+    <div class="cl-30"></div>
+    <div class="cl-30"></div>
+  <% end %>
 </div>
 
+ <div class="cl-30"></div>
