--- a/app/views/users/dashboard/_experience.html.erb
+++ b/app/views/users/dashboard/_experience.html.erb
@@ -1,22 +1,24 @@
-<div class="cl-30"></div>
-<div class="cl-30"></div>
-<div class="cl-30"></div>
 <div class="raw-fluid padding-left-10">
-  <div class="padding-10">
       <h2 class="heading" style="line-height: 5px;font-size: 20px;">Experiences</h2>
       <div style="border-bottom: solid #ccc 1.5px;"></div>
-    <div class="cl-10"></div>
+      <div class="cl-10"></div>
 
           <% if @experience_details && @experience_details.any? %>
             <% @experience_details.each do |exp| %>
     <div class="feed">
       <div class="row-fluid">
-        <div class="span6" style="width:390px;">
+        <div class="span9">
+          <% if exp.title %>
       <h4 style="line-height:5px;"><%= exp.title %></h4>
+      <% end %>
+      <% if exp.company_name %>
       <p style="color:#4B4B4B;font-size: 17px;font-style: italic;float: left;margin-right: 5px"><%= exp.company_name %></p>
+      <% end %>
+      <% if exp.industry_name %>
       <p style="color:#4B4B4B;font-size: 15px;font-style: italic;float: left;margin-left: 5px">, <%= exp.industry_name %> Industry</p>
+      <% end %>
         </div>
-       <div class="span4">
+       <div class="span3" style="float:right">
       <% if exp.is_current %>
          <p style="color:#4B4B4B;font-size: 15px;font-style: italic"><%= Date.strptime("#{exp.start_date.to_s}", "%m, %Y").strftime('%b %Y') %> to <%= exp.end_date %></p>
       <% else %>
@@ -32,7 +34,10 @@
     </div>
 
     <% end %>
+    <% else %>
+     <div class="cl-30"></div>
+     <div class="cl-30"></div>
+     <div class="cl-30"></div>
+     <div class="cl-30"></div>
     <% end %>
-<div class="cl-30"></div>
-</div>
 </div>
