--- a/app/views/users/dashboard/_technologies.html.erb
+++ b/app/views/users/dashboard/_technologies.html.erb
@@ -2,6 +2,12 @@
 <div class="raw-fluid padding-left-10">
       <h2 class="heading" style="line-height: 5px;font-size: 20px;">Technologies</h2>
       <div style="border-bottom: solid #ccc 1.5px;"></div>
+        <div class="feed">
+          <div class="row-fluid">
+             <p style="color:#4B4B4B;font-size: 15px;font-style: italic"><%=  @technical_details.details %></p>
+          </div>
+        </div>
+
 </div>
  <div class="cl-30"></div>
  <div class="cl-30"></div>
