--- a/app/views/users/dashboard/_technologies.html.erb
+++ b/app/views/users/dashboard/_technologies.html.erb
@@ -4,7 +4,9 @@
       <div style="border-bottom: solid #ccc 1.5px;"></div>
         <div class="feed">
           <div class="row-fluid">
+            <% if @technical_details && @technical_details.details %>
              <p style="color:#4B4B4B;font-size: 15px;font-style: italic"><%=  @technical_details.details %></p>
+             <% end %>
           </div>
         </div>
 
