feed style has been modified and lightbox issue has been fixed

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -43,3 +43,12 @@ font-family: 'Cinzel Decorative' !important;
 p {
 font-family: 'Cinzel Decorative' !important;
 }
+
+.grey-feed{
+padding: 10px 10px;
+color: #4B4B4B;
+background-color: whiteSmoke;
+border: 1px solid #EEE;
+margin-top: 10px;
+border-radius: 5px;
+}
