--- a/app/views/users/dashboard/_experience.html.erb
+++ b/app/views/users/dashboard/_experience.html.erb
@@ -5,7 +5,7 @@
 
           <% if @experience_details && @experience_details.any? %>
             <% @experience_details.each do |exp| %>
-    <div class="feed">
+    <div class="grey-feed">
       <div class="row-fluid">
         <div class="span9">
           <% if exp.title %>
@@ -41,3 +41,4 @@
      <div class="cl-30"></div>
     <% end %>
 </div>
+<div class="cl-30"></div>
