--- a/app/views/users/dashboard/_opensource.html.erb
+++ b/app/views/users/dashboard/_opensource.html.erb
@@ -9,7 +9,7 @@
 
   <% if @github_details && @github_details.any? %>
     <% @github_details.each do |git| %>
-      <div class="feed">
+      <div class="grey-feed">
         <div class="row-fluid">
           <div class="span9">
             <h4 style="line-height:20px;"><%= git.project_name %></h4>
