--- a/app/views/widgets/_import_datas.html.erb
+++ b/app/views/widgets/_import_datas.html.erb
@@ -3,7 +3,7 @@
     <p style="text-align:center;font-size: 18px;padding-top: 5px">Import your Datas</p>
   </div>
   <div class="padding-5" >
-    <div class="feed" style="height:35px;">
+    <div class="grey-feed" style="height:35px;">
       <div class="float-left">
         <%= image_tag '/assets/linkedin.jpg',:style=>"width:autox;height:auto;" %>
       </div>
@@ -12,7 +12,7 @@
       </div>
 
     </div>
-    <div class="feed" style="height:35px;">
+    <div class="grey-feed" style="height:35px;">
 
       <div class="float-left">
         <%= image_tag '/assets/github.jpg',:style=>"width:autox;height:auto;" %>
