--- a/app/assets/stylesheets/lightbox.css
+++ b/app/assets/stylesheets/lightbox.css
@@ -2,7 +2,7 @@
   background-color: #FFF;
   left: 40%;
   margin: 0px auto;
-  position: absolute;
+  position: fixed;
   top: 40%;
   z-index: 1003;
   -webkit-box-shadow: 0px 0px 10px 6px #889DB0;
@@ -11,10 +11,14 @@
   -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=4, Direction=135, Color='#000000')";
 }
 .black_overlay{
-  display: none;
-  position: absolute;
-  top: 0%;
-  left: 0%;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+/*  overflow-x: auto;*/
+/*  overflow-y: scroll;*/
   width: 100%;
   /* height: 100%; */
   /* height: auto; */
