--- a/app/views/users/dashboard/_education.html.erb
+++ b/app/views/users/dashboard/_education.html.erb
@@ -7,11 +7,13 @@
     <% @education_details.each do |edu| %>
       <div class="grey-feed">
         <div class="row-fluid">
-          <div class="span9" style="width:390px;">
+          <div class="span9">
             <h4 style="line-height:20px;"><%= edu.degree %></h4>
           </div>
           <div class="span3" style="float:right">
+            <div style="float:right;margin-top: 10px;margin-right: 10px">
             <p style="color:#4B4B4B;font-size: 15px;font-style: italic"><%= edu.start_date %> to <%= edu.end_date %></p>
+          </div>
           </div>
         </div>
         <p style="color:#4B4B4B;font-size: 15px;font-style: italic"><%= edu.school_name %></p>
