--- a/app/views/users/dashboard/_opensource.html.erb
+++ b/app/views/users/dashboard/_opensource.html.erb
@@ -11,11 +11,13 @@
     <% @github_details.each do |git| %>
       <div class="grey-feed">
         <div class="row-fluid">
-          <div class="span9">
+          <div class="span8">
             <h4 style="line-height:20px;"><%= git.project_name %></h4>
           </div>
-          <div class="span3" style="float:right;">
-            <p style="color:#4B4B4B;font-size: 15px;font-style: italic"><%= git.created_at.strftime('%b %Y') %> to <%= git.updated_at.strftime('%b %Y') %></p>
+          <div class="span4" style="float:right;">
+            <div style="float:right;margin-top: 10px;margin-right: 10px">
+              <p style="color:#4B4B4B;font-size: 15px;font-style: italic"><%= git.created_at.strftime('%b %Y') %> to <%= git.updated_at.strftime('%b %Y') %></p>
+            </div>
           </div>
         </div>
         <p style="color:#4B4B4B;font-size: 15px;font-style: italic"><%= git.project_description %></p>
