home page modifications

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,14 +8,14 @@
 <div class="cl-20"></div>
 <div class="cl-20"></div>
 <div class="row-fluid" style="margin-top:50px">
-  <p style="font-size:17px;"><strong>Do you already have an account on one of these sites? Click the logo to log in with it here:</strong></p>
+  <div style="font-size:17px;font-family: 'Cinzel Decorative'"><strong>Do you already have an account on one of these sites? Click the logo to log in with it here:</strong></div>
   <div class="cl-10"></div>
 
   <% facebook_img_tag = image_tag("/assets/fb.png", :style=>"margin:0px;padding:0px;", :class=>"img-circle") %>
 
   <% twitter_img_tag = image_tag("/assets/twitter.png", :style=>"margin:0px;padding:0px;", :class=>"img-circle") %>
 
-  <% google_img_tag = image_tag("/assets/google.png", :style=>"margin:0px;padding:0px;",:class=>"img-circle") %>
+  <% google_img_tag = image_tag("/assets/google2.png", :style=>"margin:0px;padding:0px;",:class=>"img-circle") %>
 
   <div class="span2">
   <div class="logo" onmouseover="applyStyle(this);" onmouseout="revertStyle(this);">
