ui changes in after login page , feed display modifications

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -34,22 +34,16 @@ body { font-size: 14px;
 font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial ;
 }
 
-.navbar .brand {font-family: 'Chela One' !important;font-style: normal; font-weight: bold;font-size:30px}
+.navbar .brand {
+font-family: 'Arvo-Regular';
+font-size:30px;
+font-weight:bold;}
 
 h {
-font-family: 'Cinzel Decorative' !important;
+font-family: 'Arvo-Regular';
 }
 
 p {
-font-family: 'Cinzel Decorative' !important;
-}
-
-.grey-feed {
-padding: 10px 10px;
-color: #4B4B4B;
-background-color: whiteSmoke;
-border: 1px solid #EEE;
-margin-top: 10px;
-border-radius: 5px;
+font-family: 'Arvo-Regular';
 }
 
