--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,20 +2,20 @@
 
 
 
-<div style="font-family: 'Cinzel Decorative' !important;font-style: normal;font-weight: 400;font-size:40px;margin-top: 40px;text-align: center;">
+<div style="font-family: 'Arvo-Regular' ;font-size:40px;margin-top: 40px;text-align: center;">
   Build Your Favorite Cvs Online using Cv Builder ...</div>
 
 <div class="cl-20"></div>
 <div class="cl-20"></div>
 <div class="row-fluid" style="margin-top:50px">
-  <div style="font-size:17px;font-family: 'Cinzel Decorative'"><strong>Do you already have an account on one of these sites? Click the logo to log in with it here:</strong></div>
-  <div class="cl-10"></div>
+  <div style="font-size:20px;font-family: 'QumpellkaNo12'">Sign in Using</div>
+  <div class="cl-20"></div>
 
   <% facebook_img_tag = image_tag("/assets/fb.png", :style=>"margin:0px;padding:0px;", :class=>"img-circle") %>
 
   <% twitter_img_tag = image_tag("/assets/twitter.png", :style=>"margin:0px;padding:0px;", :class=>"img-circle") %>
 
-  <% google_img_tag = image_tag("/assets/google2.png", :style=>"margin:0px;padding:0px;",:class=>"img-circle") %>
+  <% google_img_tag = image_tag("/assets/google.png", :style=>"margin:0px;padding:0px;",:class=>"img-circle") %>
 
   <div class="span2">
   <div class="logo" onmouseover="applyStyle(this);" onmouseout="revertStyle(this);">
