--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,7 +63,7 @@
     <div class="row-fluid">
 
       <div class="span12 " style="margin-top:20px;">
-        <p style="text-align: center;">All rights reserved : sreeharikmarar@gmail.com</p>
+        <p style="text-align: center;">All rights reserved &copy; sreeharikmarar</p>
       </div>
     </div>
   </div>
