some ui changes

--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -125,7 +125,7 @@ border-radius:300px;
 .grey-feed {
 padding: 10px 10px;
 color: #4B4B4B;
-background-color: whiteSmoke;
+background-color: #f8f8f8;
 border: 1px solid #EEE;
 margin-top: 10px;
 border-radius: 5px;
