--- a/app/views/users/dashboard/_basic_info.html.erb
+++ b/app/views/users/dashboard/_basic_info.html.erb
@@ -5,7 +5,7 @@
     </div>
 
     <div class="span5" style="width:380px;margin-left:30px;">
-      <h2 style="color:#4B4B4B;margin-top: 0px;"><%= @user.name %></h2>
+      <h2 style="color:#4B4B4B;margin-top: 0px;font-family: 'Arvo-Regular'"><%= @user.name %></h2>
       <% if @linkedin_details && @linkedin_details.headline %><h5 style="color:#4B4B4B"><%= @linkedin_details.headline %></h5><% end %>
         <span style="color: #08C;"><%= current_user.email %></span>
         <div class="cl-3"></div>
@@ -22,7 +22,7 @@
         <div class="cl-3"></div>
       <% end %>
       <% if @linkedin_details && @linkedin_details.main_address %>
-        <p class="muted"><%= @linkedin_details.main_address %></p>
+        <p style="color:#4B4B4B;"><%= @linkedin_details.main_address %></p>
         <div class="cl"></div>
       <% end %>
     </div>
