controller for technologies has been created for edit create and update

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,6 +11,7 @@
  *= require_self
  *= require home
  *= require lightbox
+ *= require bootstrap-wysihtml5
  *= require noty
  *= require bootstrap_and_overrides
  *= require general
