--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -35,11 +35,11 @@ font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial ;
 }
 
 .navbar .brand {
-font-family: 'Arvo-Regular';
+font-family: 'open-sans';
 font-size:30px;
 font-weight:bold;}
 
 p {
-font-family: 'Arvo-Regular';
+font-family: 'open-sans';
 }
 
