--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,7 @@
 
 
 <div style="font-family: 'Arvo-Regular' ;font-size:40px;margin-top: 40px;text-align: center;">
-  Build Your Favorite Cvs Online using Cv Builder ...</div>
+  Build Your Favorite Cvs Online using Cv Builder</div>
 
 <div class="cl-20"></div>
 <div class="cl-20"></div>
