--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,9 +1,9 @@
 @import "twitter/bootstrap/bootstrap";
-@import "twitter/bootstrap/responsive";
+//@import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
-@iconSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings.png");
-@iconWhiteSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings-white.png");
+@iconSpritePath: asset-path("twitter/bootstrap/icons-halflings.png");
+@iconWhiteSpritePath: asset-path("twitter/bootstrap/icons-halflings-white.png");
 
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
 // Note: If you use asset_path() here, your compiled boostrap_and_overrides.css will not
@@ -26,9 +26,6 @@
 //
 // Example:
 // @linkColor: #ff0000;
-
-@import "twitter/bootstrap/bootstrap";
-@import "twitter/bootstrap/responsive";
 
 body { font-size: 14px;
 font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial ;
