--- a/app/views/users/technologies/_edit.html.erb
+++ b/app/views/users/technologies/_edit.html.erb
@@ -13,7 +13,7 @@
       <label class="select control-label" style="text-align:left"> Technical Skills & Expertise  </label>
       <div class="controls"><%= text_area_tag("technologies[details]", @technologies.details ? @technologies.details : '' ,:style=>"height:200px;width:375px;" , :id=>"some_text_area" ) %></div>
     </div>
-    
+  <script type="text/javascript">$('#some_text_area').wysihtml5();</script>
 
     <div class="form-actions" style="margin-bottom:0px;margin-top:0px;">
       <div class="cl"></div>
@@ -27,3 +27,7 @@
   <div class="cl"></div>
 
 </div>
+
+<style type="text/css">
+  .wysihtml5-toolbar {margin-left:29%;}
+</style>
