--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,20 +1,23 @@
 @import "twitter/bootstrap/bootstrap";
-//@import "twitter/bootstrap/responsive";
+@import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
-@iconSpritePath: asset-path("twitter/bootstrap/icons-halflings.png");
-@iconWhiteSpritePath: asset-path("twitter/bootstrap/icons-halflings-white.png");
+@iconSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings.png");
+@iconWhiteSpritePath: asset-path("twitter/bootstrap/glyphicons-halflings-white.png");
 
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
-// Note: If you use asset_path() here, your compiled boostrap_and_overrides.css will not
+// Note: If you use asset_path() here, your compiled bootstrap_and_overrides.css will not
 //       have the proper paths. So for now we use the absolute path.
-//@fontAwesomeEotPath: asset-path("fontawesome-webfont.eot");
-//@fontAwesomeWoffPath: asset-path("fontawesome-webfont.woff");
-//@fontAwesomeTtfPath: asset-path("fontawesome-webfont.ttf");
-//@fontAwesomeSvgPath: asset-path("fontawesome-webfont.svg");
+@fontAwesomeEotPath: asset-path("fontawesome-webfont.eot?v=3.0.2");
+@fontAwesomeEotPath_iefix: asset-path("fontawesome-webfont.eot?#iefix&v=3.0.2");
+@fontAwesomeWoffPath: asset-path("fontawesome-webfont.woff?v=3.0.2");
+@fontAwesomeTtfPath: asset-path("fontawesome-webfont.ttf?v=3.0.2");
 
 // Font Awesome
-//@import "fontawesome";
+@import "fontawesome";
+
+// Glyphicons
+//@import "twitter/bootstrap/sprites.less";
 
 // Your custom LESS stylesheets goes here
 //
@@ -26,6 +29,7 @@
 //
 // Example:
 // @linkColor: #ff0000;
+
 
 body { font-size: 14px;
 font-family: 'Open Sans','Helvetica Neue',Helvetica,Arial ;
@@ -39,4 +43,3 @@ font-weight:bold;}
 p {
 font-family: 'open-sans';
 }
-
