--- a/app/views/users/dashboard/_technologies.html.erb
+++ b/app/views/users/dashboard/_technologies.html.erb
@@ -7,7 +7,7 @@
   <div class="grey-feed">
     <div class="row-fluid">
       <% if @technical_details && @technical_details.details %>
-        <p style="color:#4B4B4B;font-size: 16px;font-style: italic;"><%=  @technical_details.details %></p>
+        <p style="color:#4B4B4B;font-size: 16px;font-style: italic;"><%=  raw(@technical_details.details) %></p>
         <%= link_to "edit" ,edit_technologies_path , :remote => true ,:style=>"float:right;margin-right:20px;" %>
         <div class="cl"></div>
       <% else %>
