--- a/app/views/users/position/_edit.html.erb
+++ b/app/views/users/position/_edit.html.erb
@@ -1,14 +1,14 @@
 
-<%# if @position && @position.new_record? %>
-  <%# path = create_position_path %>
-<%# else %>
-  <%# path = update_position_path %>
-<%# end %>
+<% if @position && @position.new_record? %>
+  <% path = create_position_path %>
+<% else %>
+  <% path = update_position_path(:id=>@position.id) %>
+<% end %>
 
 
 <div class="padding-10" style="border-radius:2px;">
 
-  <%= form_tag(update_position_path(:id=>@position.id), :class => "form-horizontal padding-left-20 padding-right-20", :autocomplete=>"off", :id=>"FRM_ADVANCED_COMPANY_SEARCH") do %>
+  <%= form_tag(path, :class => "form-horizontal padding-left-20 padding-right-20", :autocomplete=>"off", :id=>"FRM_ADVANCED_COMPANY_SEARCH") do %>
     <div class="control-group required" style="margin-bottom: 10px;">
       <label class="select control-label" style="width:180px;text-align:left"> Title  </label>
       <div class="controls"><%= text_field_tag("position[title]", @position.title ? @position.title : '' ,:style=>"height:24px;width:300px;") %></div>
@@ -23,17 +23,24 @@
       <div class="controls"><%= text_field_tag("position[industry_name]", @position.industry_name ? @position.industry_name : '' ,:style=>"height:24px;width:300px;") %></div>
     </div>
     <div class="control-group required" style="margin-bottom: 10px;">
-      <label class="select control-label" style="width:180px;text-align:left"> From </label>
-      <div class="controls"><%= text_field_tag("position[start_date]", @position.start_date ? @position.start_date : '' ,:style=>"height:24px;width:300px;") %></div>
+      <label class="select control-label" style="width:180px;text-align:left"> current job</label>
+      <div class="controls"><%= check_box_tag("position[is_current]", @position.is_current ? @position.is_current : '' ,:style=>"height:24px;width:300px;") %></div>
     </div>
     <div class="control-group required" style="margin-bottom: 10px;">
-      <label class="select control-label" style="width:180px;text-align:left"> To  </label>
-      <div class="controls"><%= text_field_tag("position[end_date]", @position.end_date ? @position.end_date : '' ,:style=>"height:24px;width:300px;") %></div>
+      <div class="controls" style="margin-left:0px;">
+        <div style="float:left;">
+            <label class="select control-label" style="width:45px;text-align:left"> From </label>
+            <%= text_field_tag("position[start_date]", @position.start_date ? @position.start_date : '' ,:style=>"float;left;height:24px;width:150px;margin-left:30px;",:class=>"filter_date") %>
+          </div>
+          <div style="float:left;">
+            <label class="select control-label" style="width:45px;float:left;width:40px;margin-left:40px;margin-right:10px;text-align:left"> To  </label>
+            <%= text_field_tag("position[end_date]", @position.end_date ? @position.end_date : '' ,:style=>"float:left;height:24px;width:150px;") %>
+          </div>
+        </div>
     </div>
-    <div class="control-group required" style="margin-bottom: 10px;">
-      <label class="select control-label" style="width:180px;text-align:left"> is current </label>
-      <div class="controls"><%= text_field_tag("position[is_current]", @position.is_current ? @position.is_current : '' ,:style=>"height:24px;width:300px;") %></div>
-    </div>
+      <script type="text/javascript">
+        $('.filter_date').datepicker({format: "dd,mm,yyyy"});
+    </script>
     <div class="control-group required" style="margin-bottom: 10px;">
       <label class="select control-label" style="width:180px;text-align:left"> Summary </label>
       <div class="controls"><%= text_area_tag("position[summary]", @position.summary ? @position.summary : '' ,:style=>"height:70px;width:300px;") %></div>
@@ -52,3 +59,6 @@
   <div class="cl"></div>
 
 </div>
+<script type="text/javascript">
+    $('.filter_date').datepicker({format: "yyyy-mm-dd"});
+</script>
